--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "name": "user-auth",
   "version": "1.0.0",
-  "description": "",
+  "description": "User auth app",
   "main": "index.js",
+  "engines": {
+    "node": "14.15.1"
+    },
   "scripts": {
     "start": "node index.js",
     "server": "nodemon index.js",
