to fix heroku config

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "start": "node index.js",
     "server": "nodemon index.js",
     "client": "npm start --prefix client",
-    "full": "concurrently \"npm run server\" \"npm run client\" "
+    "full": "concurrently \"npm run server\" \"npm run client\" ",
+    "heroku-postbuild": "npm run full"
   },
   "keywords": [],
   "author": "",
