--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
       "react-app/jest"
     ]
   },
-  "proxy": "http://localhost:3001",
+  "proxy": "http://localgost:3001",
   "browserslist": {
     "production": [
       ">0.2%",
