--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "@testing-library/user-event": "^12.2.2",
     "bcryptjs": "^2.4.3",
     "express": "^4.17.1",
-    "express-validator": "^6.7.0",
+    "express-validator": "^6.8.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.11.4",
+    "mongoose": "^5.11.6",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
@@ -31,7 +31,7 @@
       "react-app/jest"
     ]
   },
-  "proxy": "http://localgost:3001",
+  "proxy": "http://localhost:3001",
   "browserslist": {
     "production": [
       ">0.2%",
